--- a/views/index.pug
+++ b/views/index.pug
@@ -3,5 +3,14 @@ extends layout
 block content
   h1= title
   p Hello #{title}
-  button(type="button", class="btn btn-secondary") I am a button
-  
+  button(type="button", class="btn btn-secondary", onclick="double()") I am a button
+  div#double Up the amount
+  script.
+    var value = 0;
+    var power = 1;
+
+    function double() {
+      value += 1;
+      power *= 2;
+      document.getElementById('double').innerText = `Two to the power ${value} is ${power}.`;
+    }
