Done displaying random images

--- a/views/instrument.pug
+++ b/views/instrument.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= "Search Results - Instruments"
-    - let results = [{ instrument_name: 'Guitar', manufacturer: 'Fender', price: 500 },{ instrument_name: 'Piano', manufacturer: 'Yamaha', price: 1500 },{ instrument_name: 'Drums', manufacturer: 'Pearl', price: 800 }]
+    - let results = [{ instrument_name: 'Guitar', manufacturer: 'Fender', price: 500 },{ instrument_name: 'Piano', manufacturer: 'Yamaha', price: 1500 },{ instrument_name: 'Drums', manufacturer: 'Pearl', price: 800 },{ instrument_name: 'Keyboard', manufacturer: 'Casio', price: 300 },{ instrument_name: 'Violin', manufacturer: 'Stradivarius', price: 2000 }]
 
   .container-fluid
     .row
