--- a/views/randomitem.pug
+++ b/views/randomitem.pug
@@ -1,5 +1,13 @@
 extends layout
 
 block content
-  h1= title
+  h1= title 
+
+  - let image_names = ['guitar.jpg', 'piano.jpg', 'drums.jpg', 'keyboard.jpg', 'violin.jpg']
+
+  each _ in [1, 2, 3]
+    - let random_index = Math.floor(Math.random() * 5)
+    - let image_name = image_names[random_index]
+    img(src=`/images/${image_name}`, alt=`${image_name}`, height='300', width='300')
+
   
